Fixed cycleButtonBack not working on world creation screen buttons

--- a/build.gradle
+++ b/build.gradle
@@ -78,3 +78,7 @@ publishing {
         // mavenLocal()
     }
 }
+
+minecraft {
+    accessWidener =  file("src/main/resources/refinedui.accesswidener")
+}
