Switched to using clothconfig with modmenu support.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,9 @@ maven_group=lacliz
 archives_base_name=refinedui
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.34.2+1.16
 
 gsonVersion=2.8.6
+
+modmenuVersion=1.16.9
+clothConfigVersion=4.11.26
