--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+    maven { url "https://maven.terraformersmc.com" }  // modmenu
+    maven { url "https://maven.shedaniel.me/" }  // cloth config
+}
+
 dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -21,9 +26,13 @@ dependencies {
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
-    
+
     //noinspection GroovyAssignabilityCheck
-    include modImplementation("com.google.code.gson:gson:$gsonVersion")
+    // compile against, but do not require
+    modImplementation("com.terraformersmc:modmenu:$modmenuVersion")
+    modApi("me.shedaniel.cloth:cloth-config-fabric:$clothConfigVersion") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 }
 
 processResources {
@@ -80,5 +89,5 @@ publishing {
 }
 
 minecraft {
-    accessWidener =  file("src/main/resources/refinedui.accesswidener")
+    accessWidener = file("src/main/resources/refinedui.accesswidener")
 }
