--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ group = project.maven_group
 repositories {
     maven { url "https://maven.terraformersmc.com" }  // modmenu
     maven { url "https://maven.shedaniel.me/" }  // cloth config
+    maven { url 'https://jitpack.io' }  // jitpack - for HudElements (mine!)
 }
 
 dependencies {
@@ -33,6 +34,7 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:$clothConfigVersion") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+    modImplementation "com.github.LaconicLizard:HudElements:$hudElementsVersion"
 }
 
 processResources {
